# Andromeda

./: README.md  diff.xml  github_settings.xml  ui.lnf.xml
.CLion2017.3/config/options/: github_settings.xml
CLionProjects/Andromeda/: CMakeLists.txt  Controller.cpp  Controller.h  Image.cpp  Image.h  Model.cpp  Model.h  Observer.cpp  Observer.h  Preview.cpp  Preview.h  Subject.cpp  Subject.h  View.cpp  View.h  main.cpp
CLionProjects/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
